syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package starscope.grpc;

option go_package = "github.com/loomi-labs/star-scope/grpc/event/eventpb";


service EventService {
  rpc EventStream (google.protobuf.Empty) returns (stream EventList) {}
  rpc ListEvents (ListEventsRequest) returns (EventList) {}
  rpc ListChains (google.protobuf.Empty) returns (ChainList) {}
}

enum EventType {
  FUNDING = 0;
  STAKING = 1;
  DEX = 2;
  GOVERNANCE = 3;
}

message Event {
  int64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp timestamp = 4;
  EventType event_type = 5;
  ChainData chain = 6;
}

message EventList {
  repeated Event events = 1;
}

message ListEventsRequest {
  google.protobuf.Timestamp start_time = 4;
}

message ChainData {
  int64 id = 1;
  string name = 2;
  string image_url = 3;
}

message ChainList {
  repeated ChainData chains = 1;
}
